# sensors

./: .dockerignore  .gitignore  .procfile  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
assets/: hello.ts  main.ts  main.tsx  style.css
scripts/: deploy
sensors/: admin.py  asgi.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  settings.py  urls.py  uuid7.py  views.py  wsgi.py
sensors/migrations/: 0001_initial.py  0002_alter_reading_mac_alter_reading_timestamp.py  0003_device.py  0004_alter_reading_timestamp.py  0005_alter_reading_timestamp_and_more.py
sensors/templates/: chart.html  home.html  test.html
