[tool.poetry]
name = "sensors"
version = "0.1.0"
description = ""
authors = ["Tom Eastman <tom@eastman.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-structlog = "^8.0.0"
django-request = "^1.6.3"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
django-filter = "^24.2"
djangorestframework-queryfields = "^1.1.0"
pip = "^24.0"
djangorestframework-msgpack = "^1.0.2"
polars = {extras = ["connectorx", "pyarrow"], version = "^1.35.2"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
honcho = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
